Moderniser behandligskontroll a la fpsak