@@ -1,83 +1,51 @@
 package no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.impl;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
-import javax.persistence.EntityManager;
-import javax.persistence.TypedQuery;
-
-import org.hibernate.jpa.QueryHints;
 
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingModell;
-import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegKonfigurasjon;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingStegStatus;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingTypeRef;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingType;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingTypeStegSekvens;
 
 @ApplicationScoped
-public class BehandlingModellRepository {
-
-    private EntityManager entityManager; // NOSONAR
+public class BehandlingModellRepository implements AutoCloseable {
 
     private final ConcurrentMap<Object, BehandlingModell> cachedModell = new ConcurrentHashMap<>();
 
-    BehandlingModellRepository() {
-        // for CDI proxy
-    }
-
     @Inject
-    public BehandlingModellRepository(EntityManager entityManager) {
-        Objects.requireNonNull(entityManager, "entityManager"); //$NON-NLS-1$
-        this.entityManager = entityManager;
-    }
-
-    public BehandlingStegKonfigurasjon getBehandlingStegKonfigurasjon() {
-        List<BehandlingStegStatus> list = Arrays.asList(BehandlingStegStatus.values());
-        return new BehandlingStegKonfigurasjon(list);
+    public BehandlingModellRepository() {
     }
 
     /**
      * Finn modell for angitt behandling type.
      * <p>
      * Når modellen ikke lenger er i bruk må {@link BehandlingModellImpl#close()}
-     * kalles slik at den ikke fortsetter å holde på referanser til objekter. (DETTE KAN DROPPES OM VI FÅR CACHET
-     * MODELLENE!)
+     * kalles slik at den ikke fortsetter å holde på referanser til objekter. (DETTE
+     * KAN DROPPES OM VI FÅR CACHET MODELLENE!)
      */
     public BehandlingModell getModell(BehandlingType behandlingType) {
-        Object key = cacheKey(behandlingType);
-        cachedModell.computeIfAbsent(key, kode -> byggModell(behandlingType));
+        var key = cacheKey(behandlingType);
+        cachedModell.computeIfAbsent(key, (kode) -> byggModell(behandlingType));
         return cachedModell.get(key);
     }
 
-    private Object cacheKey(BehandlingType behandlingType) {
+    protected Object cacheKey(BehandlingType behandlingType) {
         // lager en key av flere sammensatte elementer.
-        return Arrays.asList(behandlingType);
+        return List.of(behandlingType);
     }
 
-    protected BehandlingModellImpl byggModell(BehandlingType type) {
-        BehandlingModellImpl modell = nyModell(type);
-
-        List<BehandlingTypeStegSekvens> stegSekvens = finnBehandlingStegSekvens(type);
-        modell.leggTil(stegSekvens);
-
-        return modell;
+    protected BehandlingModell byggModell(BehandlingType behandlingType) {
+        return BehandlingTypeRef.Lookup.find(BehandlingModell.class, behandlingType)
+            .orElseThrow(() -> new IllegalStateException("Har ikke BehandlingModell for BehandlingType:" + behandlingType));
     }
 
-    protected BehandlingModellImpl nyModell(BehandlingType type) {
-        return new BehandlingModellImpl(type, false);
-    }
-
-    private List<BehandlingTypeStegSekvens> finnBehandlingStegSekvens(BehandlingType type) {
-        String jpql = "from BehandlingTypeStegSekvens btss where btss.behandlingType=:behandlingType ORDER BY btss.sekvensNr ASC"; //$NON-NLS-1$
-        TypedQuery<BehandlingTypeStegSekvens> query = entityManager.createQuery(jpql, BehandlingTypeStegSekvens.class);
-        query.setParameter("behandlingType", type); //$NON-NLS-1$
-        query.setHint(QueryHints.HINT_READONLY, "true");//$NON-NLS-1$
-        return query.getResultList();
+    @Override
+    public void close() throws Exception {
+        cachedModell.clear();
     }
 
 }
