@@ -5,27 +5,24 @@ import static no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.Aksjonspu
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
 import javax.inject.Inject;
-import javax.persistence.EntityManager;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegOvergangEvent;
-import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegStatusEvent;
-import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingskontrollEvent;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegTilstandSnapshot;
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingskontrollKontekst;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.events.BehandlingStegOvergangEvent;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.events.BehandlingStegStatusEvent;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.events.BehandlingskontrollEvent;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.spi.BehandlingskontrollServiceProvider;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.Behandling;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingStegStatus;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingStegTilstand;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingStegType;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingType;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.aksjonspunkt.Aksjonspunkt;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.aksjonspunkt.AksjonspunktDefinisjon;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.aksjonspunkt.AksjonspunktRepository;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.repository.BehandlingRepositoryProvider;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.testutilities.kodeverk.ScenarioSimple;
 import no.nav.foreldrepenger.tilbakekreving.dbstoette.CdiDbAwareTest;
@@ -34,37 +31,26 @@ import no.nav.foreldrepenger.tilbakekreving.dbstoette.CdiDbAwareTest;
 public class BehandlingskontrollEventPublisererTest {
     private final BehandlingType behandlingType = BehandlingType.TILBAKEKREVING;
 
-    private static final BehandlingStegType STEG_1 = TestBehandlingStegType.STEG_1;
-    private static final BehandlingStegType STEG_2 = TestBehandlingStegType.STEG_2;
-    private static final BehandlingStegType STEG_3 = TestBehandlingStegType.STEG_3;
-    private static final BehandlingStegType STEG_4 = TestBehandlingStegType.STEG_4;
+    private static final BehandlingStegType STEG_1 = BehandlingStegType.FAKTA_VERGE;
+    private static final BehandlingStegType STEG_2 = BehandlingStegType.FAKTA_FEILUTBETALING;
+    private static final BehandlingStegType STEG_3 = BehandlingStegType.FORELDELSEVURDERINGSTEG;
+    private static final BehandlingStegType STEG_4 = BehandlingStegType.VTILBSTEG;
 
-    @Inject
-    private EntityManager em;
-
-    @Inject
-    private BehandlingskontrollEventPubliserer eventPubliserer;
 
     @Inject
     private BehandlingRepositoryProvider repositoryProvider;
-
     @Inject
-    private BehandlingModellRepository behandlingModellRepository;
-
-    @Inject
-    private AksjonspunktRepository aksjonspunktRepository;
+    private BehandlingskontrollServiceProvider serviceProvider;
 
     private BehandlingskontrollTjeneste kontrollTjeneste;
 
     @BeforeEach
     public void setup() {
-        opprettStatiskModell();
-
         BehandlingModellImpl behandlingModell = byggModell();
 
-        kontrollTjeneste = new BehandlingskontrollTjeneste(repositoryProvider, behandlingModellRepository, eventPubliserer) {
+        kontrollTjeneste = new BehandlingskontrollTjeneste(serviceProvider) {
             @Override
-            protected BehandlingModellImpl getModell(Behandling behandling) {
+            protected BehandlingModellImpl getModell(BehandlingType behandlingType) {
                 return behandlingModell;
             }
         };
@@ -84,10 +70,13 @@ public class BehandlingskontrollEventPublisererTest {
 
         BehandlingskontrollKontekst kontekst = kontrollTjeneste.initBehandlingskontroll(behandling.getId());
 
-        Aksjonspunkt aksjonspunkt = aksjonspunktRepository.leggTilAksjonspunkt(behandling, TestAksjonspunktDefinisjon.AP_1, STEG_1);
-        kontrollTjeneste.aksjonspunkterFunnet(kontekst, STEG_1, Arrays.asList(aksjonspunkt));
+        var stegType = BehandlingStegType.FAKTA_FEILUTBETALING;
 
-        AksjonspunktDefinisjon[] ads = {TestAksjonspunktDefinisjon.AP_1};
+        var aksjonspunkt = serviceProvider.getAksjonspunktKontrollRepository().leggTilAksjonspunkt(behandling,
+            AksjonspunktDefinisjon.VENT_PÅ_BRUKERTILBAKEMELDING, stegType);
+        kontrollTjeneste.aksjonspunkterEndretStatus(kontekst, stegType, List.of(aksjonspunkt));
+
+        var ads = new AksjonspunktDefinisjon[]{AksjonspunktDefinisjon.VENT_PÅ_BRUKERTILBAKEMELDING};
         TestEventObserver.containsExactly(ads);
     }
 
@@ -106,7 +95,7 @@ public class BehandlingskontrollEventPublisererTest {
         // Assert
 
         BehandlingskontrollEvent startEvent = new BehandlingskontrollEvent.StartetEvent(null, null, STEG_1, null);
-        BehandlingskontrollEvent stoppEvent = new BehandlingskontrollEvent.StoppetEvent(null, null, STEG_4, BehandlingStegStatus.INNGANG);
+        BehandlingskontrollEvent stoppEvent = new BehandlingskontrollEvent.StoppetEvent(null, null, STEG_4, BehandlingStegStatus.UTGANG);
         TestEventObserver.containsExactly(startEvent, stoppEvent);
 
     }
@@ -125,24 +114,18 @@ public class BehandlingskontrollEventPublisererTest {
 
         // Assert
 
-        BehandlingStegStatusEvent steg1StatusEvent0 = new BehandlingStegStatusEvent(kontekst, STEG_1, null,
-            BehandlingStegStatus.STARTET);
-        BehandlingStegStatusEvent steg1StatusEvent1 = new BehandlingStegStatusEvent(kontekst, STEG_1, BehandlingStegStatus.STARTET,
-            BehandlingStegStatus.UTFØRT);
-        BehandlingStegStatusEvent steg2StatusEvent0 = new BehandlingStegStatusEvent(kontekst, STEG_2, null,
-            BehandlingStegStatus.STARTET);
-        BehandlingStegStatusEvent steg2StatusEvent = new BehandlingStegStatusEvent(kontekst, STEG_2, BehandlingStegStatus.STARTET,
-            BehandlingStegStatus.UTFØRT);
-        BehandlingStegStatusEvent steg3StatusEvent0 = new BehandlingStegStatusEvent(kontekst, STEG_2, null,
-            BehandlingStegStatus.STARTET);
-        BehandlingStegStatusEvent steg3StatusEvent = new BehandlingStegStatusEvent(kontekst, STEG_3, BehandlingStegStatus.STARTET,
-            BehandlingStegStatus.UTFØRT);
-        BehandlingStegStatusEvent steg4StatusEvent = new BehandlingStegStatusEvent(kontekst, STEG_4, null,
-            BehandlingStegStatus.INNGANG);
+        BehandlingStegStatusEvent steg1StatusEvent0 = new BehandlingStegStatusEvent(kontekst, STEG_1, null, BehandlingStegStatus.STARTET);
+        BehandlingStegStatusEvent steg1StatusEvent1 = new BehandlingStegStatusEvent(kontekst, STEG_1, BehandlingStegStatus.STARTET, BehandlingStegStatus.UTFØRT);
+        BehandlingStegStatusEvent steg2StatusEvent0 = new BehandlingStegStatusEvent(kontekst, STEG_2, null, BehandlingStegStatus.STARTET);
+        BehandlingStegStatusEvent steg2StatusEvent = new BehandlingStegStatusEvent(kontekst, STEG_2, BehandlingStegStatus.STARTET, BehandlingStegStatus.UTFØRT);
+        BehandlingStegStatusEvent steg3StatusEvent0 = new BehandlingStegStatusEvent(kontekst, STEG_2, null, BehandlingStegStatus.STARTET);
+        BehandlingStegStatusEvent steg3StatusEvent = new BehandlingStegStatusEvent(kontekst, STEG_3, BehandlingStegStatus.STARTET, BehandlingStegStatus.UTFØRT);
+        BehandlingStegStatusEvent steg4StatusEvent0 = new BehandlingStegStatusEvent(kontekst, STEG_4, null, BehandlingStegStatus.STARTET);
+        BehandlingStegStatusEvent steg4StatusEvent = new BehandlingStegStatusEvent(kontekst, STEG_3, BehandlingStegStatus.STARTET, BehandlingStegStatus.UTGANG);
         TestEventObserver.containsExactly(steg1StatusEvent0, steg1StatusEvent1 //
             , steg2StatusEvent0, steg2StatusEvent//
             , steg3StatusEvent0, steg3StatusEvent//
-            , steg4StatusEvent//
+            , steg4StatusEvent0, steg4StatusEvent//
         );
     }
 
@@ -150,7 +133,7 @@ public class BehandlingskontrollEventPublisererTest {
     public void skal_fyre_event_for_behandlingskontroll_tilbakeføring_ved_prosessering() {
         // Arrange
         ScenarioSimple scenario = nyttScenario(STEG_3);
-        scenario.leggTilAksjonspunkt(TestAksjonspunktDefinisjon.AP_5, STEG_4);
+        scenario.leggTilAksjonspunkt(AksjonspunktDefinisjon.VURDER_TILBAKEKREVING, STEG_4);
 
         Behandling behandling = scenario.lagre(repositoryProvider);
 
@@ -162,7 +145,7 @@ public class BehandlingskontrollEventPublisererTest {
         // Assert
         // TODO (essv): Vanskelig å overstyre SUT til å gjøre tilbakehopp i riktig retning, her gjøres det fremover.
         // Den trenger et åpent aksjonspunkt som ligger før startsteget
-        BehandlingStegOvergangEvent tilbakeføring3_4 = nyOvergangEvent(kontekst, behandling, STEG_3, BehandlingStegStatus.UTFØRT, STEG_4, BehandlingStegStatus.UTFØRT);
+        BehandlingStegOvergangEvent tilbakeføring3_4 = nyOvergangEvent(kontekst, STEG_3, BehandlingStegStatus.UTFØRT, STEG_4, null);
         TestEventObserver.containsExactly(tilbakeføring3_4);
     }
 
@@ -180,9 +163,9 @@ public class BehandlingskontrollEventPublisererTest {
 
         // Assert
 
-        BehandlingStegOvergangEvent overgang1_2 = nyOvergangEvent(kontekst, behandling, STEG_1, BehandlingStegStatus.UTFØRT, STEG_2, BehandlingStegStatus.UTFØRT);
-        BehandlingStegOvergangEvent overgang2_3 = nyOvergangEvent(kontekst, behandling, STEG_2, BehandlingStegStatus.UTFØRT, STEG_3, BehandlingStegStatus.UTFØRT);
-        BehandlingStegOvergangEvent overgang3_4 = nyOvergangEvent(kontekst, behandling, STEG_3, BehandlingStegStatus.UTFØRT, STEG_4, BehandlingStegStatus.UTFØRT);
+        BehandlingStegOvergangEvent overgang1_2 = nyOvergangEvent(kontekst, STEG_1, BehandlingStegStatus.UTFØRT, STEG_2, null);
+        BehandlingStegOvergangEvent overgang2_3 = nyOvergangEvent(kontekst, STEG_2, BehandlingStegStatus.UTFØRT, STEG_3, null);
+        BehandlingStegOvergangEvent overgang3_4 = nyOvergangEvent(kontekst, STEG_3, BehandlingStegStatus.UTFØRT, STEG_4, null);
         TestEventObserver.containsExactly(overgang1_2, overgang2_3, overgang3_4);
     }
 
@@ -192,65 +175,34 @@ public class BehandlingskontrollEventPublisererTest {
         return scenario;
     }
 
-    private BehandlingStegOvergangEvent nyOvergangEvent(BehandlingskontrollKontekst kontekst, Behandling behandling,
+    private BehandlingStegOvergangEvent nyOvergangEvent(BehandlingskontrollKontekst kontekst,
                                                         BehandlingStegType steg1, BehandlingStegStatus steg1Status, BehandlingStegType steg2, BehandlingStegStatus steg2Status) {
-        return new BehandlingStegOvergangEvent(kontekst, lagTilstand(behandling, steg1, steg1Status),
-            lagTilstand(behandling, steg2, steg2Status));
+        return new BehandlingStegOvergangEvent(kontekst, lagTilstand(steg1, steg1Status),
+            lagTilstand(steg2, steg2Status));
     }
 
-    private Optional<BehandlingStegTilstand> lagTilstand(Behandling behandling, BehandlingStegType stegType,
-                                                         BehandlingStegStatus stegStatus) {
-        return Optional.of(new BehandlingStegTilstand(behandling, stegType, stegStatus));
+    private BehandlingStegTilstandSnapshot lagTilstand(BehandlingStegType stegType,
+                                                       BehandlingStegStatus stegStatus) {
+        return new BehandlingStegTilstandSnapshot(1L, stegType, stegStatus);
     }
-
-    @SuppressWarnings("Duplicates")
-    private void opprettStatiskModell() {
-        sql("INSERT INTO BEHANDLING_STEG_TYPE (KODE, NAVN, BEHANDLING_STATUS_DEF, BESKRIVELSE) VALUES ('STEG-1', 'test-steg-1', 'UTRED', 'test')");
-        sql("INSERT INTO BEHANDLING_STEG_TYPE (KODE, NAVN, BEHANDLING_STATUS_DEF, BESKRIVELSE) VALUES ('STEG-2', 'test-steg-2', 'UTRED', 'test')");
-        sql("INSERT INTO BEHANDLING_STEG_TYPE (KODE, NAVN, BEHANDLING_STATUS_DEF, BESKRIVELSE) VALUES ('STEG-3', 'test-steg-3', 'UTRED', 'test')");
-        sql("INSERT INTO BEHANDLING_STEG_TYPE (KODE, NAVN, BEHANDLING_STATUS_DEF, BESKRIVELSE) VALUES ('STEG-4', 'test-steg-4', 'UTRED', 'test')");
-
-        sql("INSERT INTO VURDERINGSPUNKT_DEF (KODE, BEHANDLING_STEG, VURDERINGSPUNKT_TYPE, NAVN) VALUES ('STEG-2.INN', 'STEG-2', 'INN', 'STEG-2.INN')");
-        sql("INSERT INTO VURDERINGSPUNKT_DEF (KODE, BEHANDLING_STEG, VURDERINGSPUNKT_TYPE, NAVN) VALUES ('STEG-3.INN', 'STEG-3', 'INN', 'STEG-3.INN')");
-        sql("INSERT INTO VURDERINGSPUNKT_DEF (KODE, BEHANDLING_STEG, VURDERINGSPUNKT_TYPE, NAVN) VALUES ('STEG-4.INN', 'STEG-4', 'INN', 'STEG-4.INN')");
-        sql("INSERT INTO VURDERINGSPUNKT_DEF (KODE, BEHANDLING_STEG, VURDERINGSPUNKT_TYPE, NAVN) VALUES ('STEG-2.UT', 'STEG-2', 'UT', 'STEG-2.UT')");
-        sql("INSERT INTO VURDERINGSPUNKT_DEF (KODE, BEHANDLING_STEG, VURDERINGSPUNKT_TYPE, NAVN) VALUES ('STEG-3.UT', 'STEG-3', 'UT', 'STEG-3.UT')");
-        sql("INSERT INTO VURDERINGSPUNKT_DEF (KODE, BEHANDLING_STEG, VURDERINGSPUNKT_TYPE, NAVN) VALUES ('STEG-4.UT', 'STEG-4', 'UT', 'STEG-4.UT')");
-
-        sql("INSERT INTO AKSJONSPUNKT_DEF (KODE, NAVN, VURDERINGSPUNKT, TOTRINN_BEHANDLING_DEFAULT, VILKAR_TYPE, SKJERMLENKE_TYPE) VALUES ('AP_1', 'AP 1', 'STEG-2.INN', 'N', '-', '-')");
-        sql("INSERT INTO AKSJONSPUNKT_DEF (KODE, NAVN, VURDERINGSPUNKT, TOTRINN_BEHANDLING_DEFAULT, VILKAR_TYPE, SKJERMLENKE_TYPE) VALUES ('AP_2', 'AP_2', 'STEG-2.UT', 'N', '-', '-')");
-        sql("INSERT INTO AKSJONSPUNKT_DEF (KODE, NAVN, VURDERINGSPUNKT, TOTRINN_BEHANDLING_DEFAULT, VILKAR_TYPE, SKJERMLENKE_TYPE) VALUES ('AP_3', 'AP_3', 'STEG-3.INN', 'N', '-', '-')");
-        sql("INSERT INTO AKSJONSPUNKT_DEF (KODE, NAVN, VURDERINGSPUNKT, TOTRINN_BEHANDLING_DEFAULT, VILKAR_TYPE, SKJERMLENKE_TYPE) VALUES ('AP_4', 'AP_4', 'STEG-3.INN', 'N', '-', '-')");
-        sql("INSERT INTO AKSJONSPUNKT_DEF (KODE, NAVN, VURDERINGSPUNKT, TOTRINN_BEHANDLING_DEFAULT, VILKAR_TYPE, SKJERMLENKE_TYPE) VALUES ('AP_5', 'AP_5', 'STEG-4.INN', 'N', '-', '-')");
-        sql("INSERT INTO AKSJONSPUNKT_DEF (KODE, NAVN, VURDERINGSPUNKT, TOTRINN_BEHANDLING_DEFAULT, VILKAR_TYPE, SKJERMLENKE_TYPE) VALUES ('AP_6', 'AP_6', 'STEG-4.UT', 'N', '-', '-')");
-
-        em.flush();
-    }
-
-    private void sql(String sql) {
-        em.createNativeQuery(sql).executeUpdate();
-    }
-
 
     private BehandlingModellImpl byggModell() {
         // Arrange - noen utvalge, tilfeldige aksjonspunkter
-        AksjonspunktDefinisjon a0_0 = TestAksjonspunktDefinisjon.AP_1;
-        AksjonspunktDefinisjon a0_1 = TestAksjonspunktDefinisjon.AP_2;
-        AksjonspunktDefinisjon a1_0 = TestAksjonspunktDefinisjon.AP_3;
-        AksjonspunktDefinisjon a1_1 = TestAksjonspunktDefinisjon.AP_4;
-        AksjonspunktDefinisjon a2_0 = TestAksjonspunktDefinisjon.AP_5;
-        AksjonspunktDefinisjon a2_1 = TestAksjonspunktDefinisjon.AP_6;
+        var a0_0 = AksjonspunktDefinisjon.AVKLART_FAKTA_FEILUTBETALING;
+        var a0_1 = AksjonspunktDefinisjon.AVKLAR_VERGE;
+        var a1_1 = AksjonspunktDefinisjon.VURDER_FORELDELSE;
+        var a2_1 = AksjonspunktDefinisjon.VURDER_TILBAKEKREVING;
 
         DummySteg steg = new DummySteg();
-        DummySteg steg0 = new DummySteg(opprettForAksjonspunkt(a2_0));
+        DummySteg steg0 = new DummySteg(opprettForAksjonspunkt(a2_1));
         DummySteg steg1 = new DummySteg();
         DummySteg steg2 = new DummySteg();
 
-        List<TestStegKonfig> modellData = Arrays.asList(
+        List<TestStegKonfig> modellData = List.of(
             new TestStegKonfig(STEG_1, behandlingType, steg, ap(), ap()),
             new TestStegKonfig(STEG_2, behandlingType, steg0, ap(a0_0), ap(a0_1)),
-            new TestStegKonfig(STEG_3, behandlingType, steg1, ap(a1_0), ap(a1_1)),
-            new TestStegKonfig(STEG_4, behandlingType, steg2, ap(a2_0), ap(a2_1))
+            new TestStegKonfig(STEG_3, behandlingType, steg1, ap(), ap(a1_1)),
+            new TestStegKonfig(STEG_4, behandlingType, steg2, ap(), ap(a2_1))
         );
 
         return ModifiserbarBehandlingModell.setupModell(behandlingType, modellData);
