@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -83,7 +82,7 @@ public class VedtaksbrevFritekstTjenesteTest {
 
         VedtaksbrevFritekstOppsummering oppsummering = new VedtaksbrevFritekstOppsummering.Builder().medBehandlingId(
             behandlingId).build();
-        List<VedtaksbrevFritekstPeriode> fritekstperioder = Arrays.asList(
+        List<VedtaksbrevFritekstPeriode> fritekstperioder = List.of(
             new VedtaksbrevFritekstPeriode.Builder().medBehandlingId(behandlingId)
                 .medFritekst("foo")
                 .medFritekstType(VedtaksbrevFritekstType.FAKTA_AVSNITT)
